<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApresentacaoRemedios">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/design_default_color_primary_dark" />

        <ImageView
            android:id="@+id/imgRemedio"
            android:layout_width="201dp"
            android:layout_height="98dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/lista_meds" />

        <TextView
            android:id="@+id/lblRemedios"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_horizontal"
            android:text="@string/ListaRemedios"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/txtRemedios"
            android:layout_width="match_parent"
            android:layout_height="183dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="0dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btnAlterar"
            android:layout_width="333dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginRight="0dp"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:onClick="btnAlterar"
            android:text="@string/btnAlterarRemedio"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPraticaExercicio" />

        <Button
            android:id="@+id/btnAlarme"
            android:layout_width="336dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginRight="0dp"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:onClick="btnAlarme"
            android:text="@string/btnConfigurarAlarme"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPraticaExercicio" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>